* numeric.c (do_coerce): speed optimization by using rb_check_funcall   instead of rb_rescue + rb_funcall.   This fix is based on the patch by Benoit Daloze.   [Bug #7645] [ruby-core:51213]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@38756 b2dd03c8-39d4-4d8f-98ff-823fe69b080e